@@ -445,26 +445,26 @@ Micro Focus' Variable format.  Identical to the fixed format above
 except for the program-text area which extends up to column 250 instead
 of 72.
 
-@item -fformat=xopen
-X/Open Free-form format.  The program-text area may start in column 1
-unless an indicator is present, and lines may contain up to 80
-characters.  Indicator for debugging lines is @code{D } instead of
-@code{D} or @code{d}.
-
 @item -fformat=xcard
 ICOBOL xCard format.  Variable format with right margin set at column
 255 instead of 250.
 
+@item -fformat=xopen
+X/Open Free-form format.  The program-text area may start in column 1
+unless an indicator is present, and lines may contain up to 255
+characters.  Indicator for debugging lines is ``@code{D }'' instead of
+``@code{D}'' or ``@code{d}''.
+
 @item -fformat=crt
 ICOBOL Free-form format (CRT).  Similar to the X/Open format above, with
 lines containing up to 320 characters and single-character debugging
-line indicators (@code{D} or @code{d}).
+line indicators (``@code{D}'' or ``@code{d}'').
 
 @item -fformat=terminal
 ACUCOBOL-GT Terminal format.  Similar to the CRT format above, with
-indicator for debugging lines being @code{\D} instead of @code{D} or
-@code{d}.  This format is mostly compatible with VAX COBOL terminal
-source format.
+indicator for debugging lines being ``@code{\D}'' instead of
+``@code{D}'' or ``@code{d}''.  This format is mostly compatible with VAX
+COBOL terminal source format.
 
 @item -fformat=cobolx
 COBOLX format.  This format is similar to the CRT format above, except
@@ -489,8 +489,8 @@ In general, division, section, and paragraph names must start in Area A.
 In the @code{DATA DIVISION}, level numbers @code{01} and @code{77}, must
 also start in Area A.  In the @code{PROCEDURE DIVISION}s, statements and
 separator periods must fit within Area B.  Every source format listed
-above may be subject to Area A enforcement, except @code{FIXED} and
-@code{FREE}.
+above may be subject to Area A enforcement, except @code{FIXED},
+@code{FREE}, and @code{XOPEN}.
 
 Note that Area A enforcement enables recovery from missing periods
 between paragraphs and sections.
