@@ -156,12 +156,13 @@ NEWS - user visible changes				-*- outline -*-
    XCARD		ICOBOL xCard (extended card) format
    XOPEN		X/Open Free-form format
 
-   These formats come with Area A enforcement, that checks whether
-   division, section, and paragraph names start in Area A (i.e, before
-   margin B), and so do level indicators FD, SD, RD, and CD, and level
-   numbers 01, and 77.  The underlying checks are enabled or disabled
-   by default using dialect option `areacheck`, and then with `$SET
-   AREACHECK` and `$SET NOAREACHECK` compiler directives.
+   These formats come with Area A enforcement (except for XOPEN), that
+   checks whether division, section, and paragraph names start in Area
+   A (i.e, before margin B), and so do level indicators FD, SD, RD,
+   and CD, and level numbers 01, and 77.  The underlying checks are
+   enabled or disabled by default using dialect option `areacheck`,
+   and then with `$SET AREACHECK` and `$SET NOAREACHECK` compiler
+   directives.
 
    As a result of reference format being a dialect option, Area A
    enforcement is available and enabled by default for dialects BS2000
